Minor alignment correction

--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -10,6 +10,11 @@
       height: 339px;
       padding: 170px 0 0 0;
       text-align: left;
+      .container{
+         -webkit-transform: translateY(-40%);
+         -ms-transform: translateY(-40%);
+         transform: translateY(-40%);
+      }
    }
    .container{
       -webkit-transform: translateY(-50%);
